--- a/config.env
+++ b/config.env
@@ -1,1 +1,1 @@
-DATABASE_URL=mongodb+srv://alejandro:Picapiedra2887@cluster0-7vcr1.mongodb.net/basemutant?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://alejandro:claveale@cluster0-7vcr1.mongodb.net/basemutant?retryWrites=true
